Fixed error visibility

--- a/css/script.css
+++ b/css/script.css
@@ -249,6 +249,14 @@
   text-decoration-style: wavy;
 }
 
+.ta-error-color {
+  text-decoration: underline;
+  text-decoration-color: red;
+  text-decoration-style: wavy;
+
+  color: red;
+}
+
 .ta-true {
   color: #51e859;
   font-weight: bold;
